[java-dfa] More string not-null checks for myNotValues (EA-240274)
GitOrigin-RevId: deefd51971378229216df6518e6d170e541f7f7a